fix: Update background color for dark theme navbar for better contrast

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -158,7 +158,7 @@ html[data-theme='dark'] {
 
     --ifm-navbar-background-color: var(--color-firebound-brown-900);
     --ifm-navbar-link-color: var(--color-firebound-beige-100);
-    --ifm-background-color: var(--color-firebound-brown-950);
+    --ifm-background-color: var(--color-firebound-brown-900);
     --ifm-background-surface-color: var(--color-firebound-brown-950);
 
     --ifm-menu-color: var(--color-firebound-beige-300);
